--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
       <div style="margin: -80px 230px 100px 230px">
       </div>
       <h2 class="subtitle has-text-centered">
-      We introduce <strong>SceneFun3d</strong>, a large-scale dataset with <strong>highly accurate interaction annotations</strong> in 3D real-world indoor environments.
+      We introduce <strong>SceneFun3D</strong>, a large-scale dataset with <strong>highly accurate interaction annotations</strong> in 3D real-world indoor environments.
       </h2>
     </div>
   </div>
