--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
             </span>
             <br>
             <span class="author-block">
-              <a href="https://federicotombari.github.io/">Federico Tombari</a><sup>2</sup>,
+              <a href="https://federicotombari.github.io/">Federico Tombari</a><sup>2,3</sup>,
             </span>
             <span class="author-block">
               <a href="https://studios.disneyresearch.com/people/bob-sumner/">Robert W. Sumner</a><sup>1</sup>,
             </span>
             <span class="author-block">
-              <a href="https://people.inf.ethz.ch/pomarc/">Marc Pollefeys</a><sup>1,3</sup>,
+              <a href="https://people.inf.ethz.ch/pomarc/">Marc Pollefeys</a><sup>1,4</sup>,
             </span>
             <span class="author-block">
               <a href="https://francisengelmann.github.io/">Francis Engelmann</a><sup>1,2</sup>
@@ -114,7 +114,8 @@
           <div class="is-size-5 publication-authors">
             <span class="author-block" style="margin-right: 1em;"><sup>1</sup>ETH Zürich</span>
             <span class="author-block" style="margin-right: 1em;"><sup>2</sup>Google</span>
-            <span class="author-block" style="margin-right: 1em;"><sup>3</sup>Microsoft</span>
+            <span class="author-block" style="margin-right: 1em;"><sup>3</sup>TUM</span>
+            <span class="author-block" style="margin-right: 1em;"><sup>4</sup>Microsoft</span>
           </div>
 
           <div class="column has-text-centered">
