--- a/index.html
+++ b/index.html
@@ -122,15 +122,15 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href=""
-                   class="external-link button is-normal is-rounded is-dark" disabled="">
+                <a href="https://alexdelitzas.github.io/assets/pdf/SceneFun3D.pdf"
+                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                   </span>
                   <span>Paper</span>
                 </a>
               </span>
-              <span class="link-block">
+<!--               <span class="link-block">
                 <a href=""
                    class="external-link button is-normal is-rounded is-dark" disabled="">
                   <span class="icon">
@@ -138,7 +138,7 @@
                   </span>
                   <span>arXiv</span>
                 </a>
-              </span>
+              </span> -->
               <!-- Video Link. -->
               <!-- <span class="link-block">
                 <a href="https://www.youtube.com/watch?v=MrKrnHhk8IA"
