--- a/index.html
+++ b/index.html
@@ -151,15 +151,8 @@
               </span> -->
               <!-- Code Link. -->
               <span class="link-block">
-                <!-- <a href=""
+                  <a href="https://github.com/SceneFun3D/scenefun3d"
                    class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                      <i class="fab fa-github"></i>
-                  </span>
-                  <span>Code</span>
-                  </a> -->
-                  <a href=""
-                   class="external-link button is-normal is-rounded is-dark" disabled="">
                   <span class="icon">
                       <i class="fab fa-github"></i>
                   </span>
