--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="column has-text-centered">
           <h1 class="title is-1 publication-title">SceneFun3D</h1>
           <h1 class="title is-3 publication-title">Fine-Grained Functionality and Affordance Understanding<br />in 3D Scenes</h1>
-          <h1 class="title is-4" style="color: #5c5c5c;">CVPR 2024</h1>
+          <h1 class="title is-4" style="color: #5c5c5c;">CVPR 2024 Oral</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://alexdelitzas.github.io">Alexandros Delitzas</a><sup>1</sup>,
