add benchmark link

--- a/index.html
+++ b/index.html
@@ -120,16 +120,8 @@
 
           <div class="column has-text-centered">
             <div class="publication-links">
-              <!-- PDF Link. -->
-              <span class="link-block">
-                <a href="https://alexdelitzas.github.io/assets/pdf/SceneFun3D.pdf"
-                   class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                      <i class="fas fa-file-pdf"></i>
-                  </span>
-                  <span>Paper</span>
-                </a>
-              </span>
+
+
 <!--               <span class="link-block">
                 <a href=""
                    class="external-link button is-normal is-rounded is-dark" disabled="">
@@ -149,26 +141,33 @@
                   <span>Video</span>
                 </a>
               </span> -->
-              <!-- Code Link. -->
-              <span class="link-block">
-                  <a href="https://github.com/SceneFun3D/scenefun3d"
-                   class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                      <i class="fab fa-github"></i>
-                  </span>
-                  <span>Code</span>
-                  </a>
-              </span>
-              <!-- Dataset Link. -->
-              <span class="link-block">
-                <a href=""
-                   class="external-link button is-normal is-rounded is-dark" disabled="">
-                  <span class="icon">
-                      <i class="far fa-images"></i>
-                  </span>
-                  <span>Data</span>
-                  </a>
-            </div>
+
+<span class="link-block">
+  <a href="https://alexdelitzas.github.io/assets/pdf/SceneFun3D.pdf" class="external-link button is-normal is-rounded is-dark">
+    <span class="icon"><i class="fas fa-file-pdf"></i></span><span>Paper</span>
+  </a>
+</span>
+                
+
+<span class="link-block">
+  <a href="https://github.com/SceneFun3D/scenefun3d" class="external-link button is-normal is-rounded is-dark">
+    <span class="icon"><i class="fab fa-github"></i></span><span>Code</span>
+  </a>
+</span>
+
+<span class="link-block">
+  <a href="" class="external-link button is-normal is-rounded is-dark" disabled="">
+    <span class="icon"><i class="far fa-images"></i></span><span>Data</span>
+  </a>
+</span>
+
+<span class="link-block">
+  <a href="https://opensun3d.github.io/cvpr24-challenge/track_2/" class="external-link button is-normal is-rounded is-dark">
+    <span class="icon"><i class="fa fa-trophy" aria-hidden="true"></i></span><span>Benchmark</span>
+  </a>
+</span>
+
+</div>
           </div>
         </div>
       </div>
