--- a/index.html
+++ b/index.html
@@ -280,8 +280,8 @@
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <pre><code>@inproceedings{delitzas2024scenefun3d, 
-  author = {Alexandros Delitzas and Ayca Takmaz and Federico Tombari and Robert Sumner and Marc Pollefeys and Francis Engelmann}, 
-  title = {SceneFun3D: Fine-Grained Functionality and Affordance Understanding in 3D Scenes}, 
+  title = {{SceneFun3D: Fine-Grained Functionality and Affordance Understanding in 3D Scenes}}, 
+  author = {Delitzas, Alexandros and Takmaz, Ayca and Tombari, Federico and Sumner, Robert and Pollefeys, Marc and Engelmann, Francis}, 
   booktitle = {IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)}, 
   year = {2024}
 }</code></pre>
