--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
             <span class="author-block">
               <a href="https://federicotombari.github.io/">Federico Tombari</a><sup>2,3</sup>,
             </span>
+            </br>
             <span class="author-block">
               <a href="https://studios.disneyresearch.com/people/bob-sumner/">Robert W. Sumner</a><sup>1</sup>,
             </span>
@@ -247,7 +248,6 @@
 
 <section class="section">
   <div class="container is-max-desktop">
-    <!-- Abstract. -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Abstract</h2>
@@ -264,17 +264,18 @@
         </div>
       </div>
     </div>
-    <!--/ Abstract. -->
-
   </div>
 </section>
 
-<section class="section">
+<section class="section" id="video">
   <div class="container is-max-desktop">
-
+    <p align="center">
+      <video controls autoplay loop poster="static/images/teaser2_poster.png">
+        <source src="static/images/teaser2.mp4" type="video/mp4">
+      </video>
+      </p>
   </div>
 </section>
-
 
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
