--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column">
-        <h2 class="title is-3">Potential applications</h2>
+        <h2 class="title is-3">Applications</h2>
         <img src="./static/images/potential_applications.png" class="teaser-fig" alt="teaser-fig.">
         <div class="content has-text-justified">
           <p>
