--- a/index.html
+++ b/index.html
@@ -314,9 +314,9 @@
             We introduce SceneFun3D, the first large-scale dataset with <strong>geometrically fine-grained interaction annotations</strong> in 3D real-world indoor environments. 
             We aim to encourage research on the following questions: 
             <ul>
-              <li>Where are the functionalities located in 3D indoor environments and what actions they afford?</li>
-              <li>What purpose do the functionalities serve in the scene context?</li>
-              <li>Which motions are involved to interact with the functional elements?</li>
+              <li><strong>Where</strong> are the functionalities located in 3D indoor environments and what actions they afford?</li>
+              <li><strong>What</strong> purpose do the functionalities serve in the scene context?</li>
+              <li><strong>How</strong> to interact with the functional elements?</li>
             </ul>
           </p>
         </div>
