--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="column has-text-centered">
           <h1 class="title is-1 publication-title">SceneFun3D</h1>
           <h1 class="title is-3 publication-title">Fine-Grained Functionality and Affordance Understanding<br />in 3D Scenes</h1>
-          <h1 class="title is-4" style="color: #5c5c5c;">CVPR 2024 Oral</h1>
+          <h1 class="title is-4" style="color: #5c5c5c;">CVPR 2024 (Oral)</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://alexdelitzas.github.io">Alexandros Delitzas</a><sup>1</sup>,
@@ -148,10 +148,23 @@
   </a>
 </span>
                 
-
 <span class="link-block">
   <a href="https://github.com/SceneFun3D/scenefun3d" class="external-link button is-normal is-rounded is-dark">
     <span class="icon"><i class="fab fa-github"></i></span><span>Code</span>
+  </a>
+</span>
+
+<span class="link-block">
+  <a href="https://youtu.be/T-HPNIYUOoc" class="external-link button is-normal is-rounded is-dark">
+    <span class="icon"><i class="fab fa-youtube"></i></span><span>Video</span>
+  </a>
+</span>
+
+<span class="link-block">
+  <a href="./static/images/poster.pdf" class="external-link button is-normal is-rounded is-dark">
+    <span class="icon">
+      <svg class="svg-inline--fa fa-palette fa-w-16" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="palette" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg=""><path fill="currentColor" d="M204.3 5C104.9 24.4 24.8 104.3 5.2 203.4c-37 187 131.7 326.4 258.8 306.7 41.2-6.4 61.4-54.6 42.5-91.7-23.1-45.4 9.9-98.4 60.9-98.4h79.7c35.8 0 64.8-29.6 64.9-65.3C511.5 97.1 368.1-26.9 204.3 5zM96 320c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32zm32-128c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32zm128-64c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32zm128 64c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32z"></path></svg>
+    </span><span>Poster</span>
   </a>
 </span>
 
