--- a/index.html
+++ b/index.html
@@ -284,8 +284,22 @@
 <section class="section">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
+      <div class="column">
+        <h2 class="title is-3">Video</h2>
+        <div class="publication-video">
+          <iframe src="https://www.youtube.com/embed/T-HPNIYUOoc" title="[CVPR &#39;24 Oral] Fine-Grained Functionality and Affordance Understanding in 3D Scenes" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="section">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
       <!-- <div class="column is-four-fifths"> -->
       <div class="column">
+        <hr />
         <h2 class="title is-3">Motivation</h2>
         <div class="columns is-centered">
           <div class="column">
