--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <h1 class="title is-1 publication-title">SceneFun3D</h1>
           <h1 class="title is-3 publication-title">Fine-Grained Functionality and Affordance Understanding<br />in 3D Scenes</h1>
           <h1 class="title is-4" style="color: #5c5c5c;">CVPR 2024 (Oral)</h1>
-          <h1 class="title is-5" style="color: #5c5c5c;">Orals 4B, Summit Flex Hall AB - Thursday, June 20, 13:00-14:30
+          <h1 class="title is-5" style="color: #5c5c5c;">Orals 4B, Summit Flex Hall AB - Thursday, June 20, 13:00
           <br />Poster Session 4 & Exhibit Hall, Arch 4A-E - Thursday, June 20, 17:15-18:45</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
