--- a/index.html
+++ b/index.html
@@ -171,14 +171,8 @@
 </span>
 
 <span class="link-block">
-  <a href="" class="external-link button is-normal is-rounded is-dark" disabled="">
-    <span class="icon"><i class="far fa-images"></i></span><span>Data</span>
-  </a>
-</span>
-
-<span class="link-block">
   <a href="https://opensun3d.github.io/cvpr24-challenge/track_2/" class="external-link button is-normal is-rounded is-dark">
-    <span class="icon"><i class="fa fa-trophy" aria-hidden="true"></i></span><span>Benchmark</span>
+    <span class="icon"><i class="fa fa-trophy" aria-hidden="true"></i></span><span>Benchmark Data</span>
   </a>
 </span>
 
