--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
       <div class="columns is-centered">
         <div class="column has-text-centered">
           <h1 class="title is-1 publication-title">SceneFun3D</h1>
+          <!-- <h1 class="title is-1 publication-title" style="text-align: center; display: flex; justify-content: center; align-items: center; flex-wrap: wrap;"><span style="margin-top: 7px">SceneFun3D</span><img src="static/images/logo2.png" alt="Logo" width="80px" style="margin-left: 20px;"></h1> -->
           <h1 class="title is-3 publication-title">Fine-Grained Functionality and Affordance Understanding<br />in 3D Scenes</h1>
           <h1 class="title is-4" style="color: #5c5c5c;">CVPR 2024 (Oral)</h1>
           <div class="is-size-5 publication-authors">
@@ -169,8 +170,8 @@
 </span>
 
 <span class="link-block">
-  <a href="https://opensun3d.github.io/cvpr24-challenge/track_2/" class="external-link button is-normal is-rounded is-dark">
-    <span class="icon"><i class="fa fa-trophy" aria-hidden="true"></i></span><span>Benchmark Data</span>
+  <a href="https://scenefun3d.github.io" class="external-link button is-normal is-rounded is-dark">
+    <span class="icon"><i class="fa fa-book" aria-hidden="true"></i></span><span>Documentation (coming soon)</span>
   </a>
 </span>
 
