--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
 </span>
 
 <span class="link-block">
-  <a href="https://scenefun3d.github.io" class="external-link button is-normal is-rounded is-dark">
-    <span class="icon"><i class="fa fa-book" aria-hidden="true"></i></span><span>Documentation (coming soon)</span>
+  <a href="https://scenefun3d.github.io/documentation" class="external-link button is-normal is-rounded is-dark">
+    <span class="icon"><i class="fa fa-book" aria-hidden="true"></i></span><span>Documentation</span>
   </a>
 </span>
 
