--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
 <span class="link-block">
   <a href="https://scenefun3d.github.io/documentation" class="external-link button is-normal is-rounded is-dark">
-    <span class="icon"><i class="fa fa-book" aria-hidden="true"></i></span><span>Documentation</span>
+    <span class="icon"><i class="fa fa-book" aria-hidden="true"></i></span><span>Dataset</span>
   </a>
 </span>
 
