--- a/index.html
+++ b/index.html
@@ -175,6 +175,12 @@
   </a>
 </span>
 
+<span class="link-block">
+  <a href="https://eval.ai/web/challenges/challenge-page/2466/leaderboard/6119" class="external-link button is-normal is-rounded is-dark">
+    <span class="icon"><i class="fa fa-rocket" aria-hidden="true"></i></span><span>Benchmark</span>
+  </a>
+</span>
+
 </div>
           </div>
         </div>
