--- a/benchmark.html
+++ b/benchmark.html
@@ -52,6 +52,12 @@
 <body>
 <section class="section">
   <div class="container is-max-desktop">
+
+    <!-- LOGO -->
+    <div class="has-text-centered" style="margin-bottom: 1rem;">
+      <img src="./static/images/logo2.png" alt="SceneFun3D Logo" style="max-height: 80px;">
+    </div>
+    
     <h1 class="title is-2 has-text-centered">SceneFun3D Benchmark Results</h1>
 
     <div class="content">
