--- a/index.html
+++ b/index.html
@@ -180,8 +180,14 @@
 </span>
 
 <span class="link-block">
-  <a href="https://eval.ai/web/challenges/challenge-page/2466/leaderboard" class="external-link button is-normal is-rounded is-dark">
-    <span class="icon"><i class="fa fa-rocket" aria-hidden="true"></i></span><span>Benchmark</span>
+  <a href="https://scenefun3d.github.io/benchmark" class="external-link button is-normal is-rounded is-dark">
+    <span class="icon"><i class="fa fa-chart-line" aria-hidden="true"></i></span><span>Benchmark</span>
+  </a>
+</span>
+
+<span class="link-block">
+  <a href="https://eval.ai/web/challenges/challenge-page/2466" class="external-link button is-normal is-rounded is-dark">
+    <span class="icon"><i class="fa fa-rocket" aria-hidden="true"></i></span><span>EvalAI</span>
   </a>
 </span>
 
