--- a/benchmark.html
+++ b/benchmark.html
@@ -62,7 +62,10 @@
 
     <div class="content">
       <div class="has-text-centered" style="margin-bottom: 2rem; font-size: 0.9rem;">
-        <span>🔄 Results are updated in real-time from the official <a href="https://eval.ai/web/challenges/challenge-page/2466/leaderboard" target="_blank">EvalAI leaderboard</a>.</span>
+        <p class="has-text" style="margin-top: 2rem; font-size: 1rem;">
+          To submit to the benchmark refer to the <a href="https://scenefun3d.github.io/documentation/benchmarks/guidelines" target="_blank">submission instructions</a>.
+          Once ready, you can submit your results via <a href="https://eval.ai/web/challenges/challenge-page/2466">EvalAI</a>.
+        </p>
       </div>
       <!-- Task 1 -->
       <h2 class="title is-4">Functionality Segmentation (test split)</h2>
@@ -99,9 +102,6 @@
       </table>
     </div>
 
-    <p class="has-text" style="margin-top: 2rem; font-size: 1rem;">
-      Before making a submission to the benchmark, please refer to the <a href="https://scenefun3d.github.io/documentation/benchmarks/guidelines" target="_blank">submission instructions</a>.
-    </p>
 
     <br><br>
 
