--- a/index.html
+++ b/index.html
@@ -185,11 +185,11 @@
   </a>
 </span>
 
-<span class="link-block">
+<!-- <span class="link-block">
   <a href="https://eval.ai/web/challenges/challenge-page/2466" class="external-link button is-normal is-rounded is-dark">
     <span class="icon"><i class="fa fa-rocket" aria-hidden="true"></i></span><span>EvalAI</span>
   </a>
-</span>
+</span> -->
 
 </div>
           </div>
